--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel=stylesheet type="text/css" href="index.css">
   </head>
   <body>
-      <h1>Hello Azure!!!</h1>
+      <div class="container">
+        <header>header</header>
+        <div class="content_wrap">
+          <div class="sidebar_left">sidebar_left</div>
+          <div class="content">content</div>
+          <div class="sidebar_right">sidebar_right</div>
+        </div>
+        <footer>footer</footer>
+      </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
